chore(webapp): reduce deprecation warnings